--- a/src/test/resources/bin.properties
+++ b/src/test/resources/bin.properties
@@ -1,3 +1,8 @@
 base.url = http://pastebin.com/
 expirationDropdown.item = 10 Minutes
+syntaxHighlighting.item = Bash
 scroll.page.down = scroll(0, 250);
+new.paste = git config --global user.name  "New Sheriff in Town" \n\
+git reset $(git commit-tree HEAD^{tree} -m "Legacy code" \n\
+git push origin master --force
+name.title = how to gain dominance among developers
