Pastebin automation updated feature

--- a/src/test/resources/bin.properties
+++ b/src/test/resources/bin.properties
@@ -1,4 +1,4 @@
-base.url = http://pastebin.com/
+base.url = http://pastebin.com
 expirationDropdown.item = 10 Minutes
 syntaxHighlighting.item = Bash
 scroll.page.down = scroll(0, 250);
