color of text verify added

--- a/src/test/resources/bin.properties
+++ b/src/test/resources/bin.properties
@@ -6,3 +6,6 @@ new.paste = git config --global user.name  "New Sheriff in Town" \n\
 git reset $(git commit-tree HEAD^{tree} -m "Legacy code" \n\
 git push origin master --force
 name.title = how to gain dominance among developers
+expiration.dropdown = expiration
+syntaxHighlighting.dropdown = syntax highlighting
+default.color = rgba(255, 255, 255, 1)
